fix bug re: removing autogrow-shadow fields: content-field#willDestroyElement now calls @removeAutogrow(). allow multiline (vertically growing) val fields; update autogrow-plus to check vertial case for whether shadow node is inserted -- buggy case; shift all alignment of content-fields to vertical-align top

--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -85,6 +85,7 @@ textarea.content-field {
   resize: none;
   background: none;
   overflow: hidden;
+  vertical-align: top;
 }
 textarea.content-field:focus {
   border: none;
@@ -161,6 +162,7 @@ textarea.content-field.key-field:focus { }
  ********************/
 span.colon-glyph {
   position: relative;
+  vertical-align: top;
   left: -10px;
 }
 /*
